// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create a function 1`] = `
Object {
  "resources": Array [
    Object {
      "attrs": Object {},
      "inbound": Array [],
      "outbound": Array [],
      "path": "main/my_function",
      "props": Object {
        "environmentVariables": Object {
          "ENV_VAR1": "true",
        },
        "sourceCodeFile": "assets/my_function/index.js",
        "sourceCodeLanguage": "javascript",
      },
      "type": "wingsdk.cloud.Function",
    },
  ],
  "sdkVersion": "0.0.0",
}
`;

exports[`invoke function fails 1`] = `
Object {
  "resources": Array [
    Object {
      "attrs": Object {},
      "inbound": Array [],
      "outbound": Array [],
      "path": "main/my_function",
      "props": Object {
        "environmentVariables": Object {},
        "sourceCodeFile": "assets/my_function/index.js",
        "sourceCodeLanguage": "javascript",
      },
      "type": "wingsdk.cloud.Function",
    },
  ],
  "sdkVersion": "0.0.0",
}
`;

exports[`invoke function succeeds 1`] = `
Object {
  "resources": Array [
    Object {
      "attrs": Object {},
      "inbound": Array [],
      "outbound": Array [],
      "path": "main/my_function",
      "props": Object {
        "environmentVariables": Object {},
        "sourceCodeFile": "assets/my_function/index.js",
        "sourceCodeLanguage": "javascript",
      },
      "type": "wingsdk.cloud.Function",
    },
  ],
  "sdkVersion": "0.0.0",
}
`;

exports[`invoke function with environment variables 1`] = `
Object {
  "resources": Array [
    Object {
      "attrs": Object {},
      "inbound": Array [],
      "outbound": Array [],
      "path": "main/my_function",
      "props": Object {
        "environmentVariables": Object {
          "PIG_LATIN": "true",
        },
        "sourceCodeFile": "assets/my_function/index.js",
        "sourceCodeLanguage": "javascript",
      },
      "type": "wingsdk.cloud.Function",
    },
  ],
  "sdkVersion": "0.0.0",
}
`;
